--- a/CV/cv_page1.html
+++ b/CV/cv_page1.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  
-    <title>
-        Personal
-    </title>
+    <title>Personal</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" />
     
     <!--bootstrap links-->
@@ -14,10 +12,10 @@
 
     </head>
     <body>
-        <h1>Personal Details</h1>
-        <p>Name: Amy Dolan</p>
-        <p>Phone number: 086 12345678</p>
-        <p>Address: Cork</p>
+        <h1 class="mainheading">Personal Details</h1>
+        <p><strong>Name:</strong> Amy Dolan</p>
+        <p><strong>Phone Number:</strong> 086 12345678</p>
+        <p><strong>Address:</strong> *</p>
         
         <a href="cv_page2.html" class="btn btn-dark">Next</a>
     </body>
