--- a/CV/cv_page3.html
+++ b/CV/cv_page3.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>  
-    <title>
-        Work Experience
-    </title>
+    <title>Work Experience</title>
+    <link rel="stylesheet" href="stylesheet.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -12,8 +11,8 @@
     </head>
     <body>
         <h1>Work Experience Details</h1>
-        <p>Where I Worked: Phelans Pharmacy Glanmire</p>
-        <p>When I worked: Began working here February 2015-present</p>
+        <p><strong>Where I Worked:</strong> Phelans Pharmacy Glanmire</p>
+        <p><strong>When I Worked:</strong> Began working here February 2015-present</p>
         
         <a href="homepage.html" class="btn btn-success">Home</a>
     </body>
