--- a/homepage.html
+++ b/homepage.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" href="mystylesheet.css" type="text/css" />
     </head>
     <body>
-        <h1 class="mainheading">117407532 - IS1113 Project!</h1>
+        <h1 class="mainheading">117407532 - IS1113 Project</h1>
         
-        <a href="cv/cv_page1.html">Curriculum Vitae</a>
+        <a href="cv/cv_page1.html">CV</a>
         <a href="interests/sports.html">Interests</a>
     </body>
 </html>
