pushing to github

--- a/cv/cv_page1.html
+++ b/cv/cv_page1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>  
     <title>Personal</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" />
@@ -16,6 +17,7 @@
         <p><strong>Name:</strong> Amy Dolan</p>
         <p><strong>Phone Number:</strong> 086 12345678</p>
         <p><strong>Address:</strong> *</p>
+        <p><strong>Email:</strong> 117407532@umail.ucc.ies</p>
         
         <a href="cv_page2.html" class="btn btn-dark">Next</a>
     </body>
