--- a/interests/sports.html
+++ b/interests/sports.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <title>Sports</title>
         <link rel="stylesheet" href="../mystylesheet.css" type="text/css" />
