pushing to github

--- a/interests/sports.html
+++ b/interests/sports.html
@@ -17,6 +17,6 @@
         <p><strong>Favourite Sport:</strong> Swimming</p>
         <p><strong>Training:</strong> Weekly</p>
         
-        <a href="travel.html" class="btn btn-dark">Next</a>
+        <a href="music.html" class="btn btn-dark">Next</a>
     </body>
 </html> 
