pushing to github

--- a/cv/cv_page1.html
+++ b/cv/cv_page1.html
@@ -17,7 +17,7 @@
         <p><strong>Name:</strong> Amy Dolan</p>
         <p><strong>Phone Number:</strong> 086 12345678</p>
         <p><strong>Address:</strong> *</p>
-        <p><strong>Email:</strong> 117407532@umail.ucc.ies</p>
+        <p><strong>Email:</strong> 117407532@umail.ucc.ie</p>
         
         <a href="cv_page2.html" class="btn btn-dark">Next</a>
     </body>
