--- a/homepage.html
+++ b/homepage.html
@@ -1,23 +1,76 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <head>
-        <title>Home</title>
-        <link rel="stylesheet" href="mystylesheet.css" type="text/css" />
-    </head>
-    <body>
-        <h1 class="mainheading">117407532 - IS1113 Project</h1>
-        
-        <a href="cv/cv_page1.html">CV</a>
-        <a href="interests/sports.html">Interests</a>
-        <a href="ebusiness/Ebus1.php">Ebus</a>
-        
-        <br/>
-        <br/>
-        <br/>
-        <a href="http://is1113117407532.herokuapp.com/">is1113117407532.herokuapp.com</a>
-        <br/>
-        <br/>
-        <a href="https://github.com/amydolan/is1113117407532/graphs/commit-activity">Github</a>
-    </body>
+<head>
+<style>
+body {margin:0;}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li><a class="active" href="homepage.html">Home</a></li>
+  <li><a href="interests/sports.html">Interests</a></li>
+  <li><a href="ebusiness/Ebus1.php">E-Business</a></li>
+  <li><a href="cv/cv_page1.html">CV</a></li>
+</ul>
+
+<div style="padding:20px;margin-top:30px;background-color:#1abc9c;height:1500px;">
+<h1>Fixed Top Navigation Bar</h1>
+<h2>Scroll this page to see the effect</h2>
+<h2>The navigation bar will stay at the top of the page while scrolling</h2>
+
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+<p>Some text some text some text some text..</p>
+</div>
+
+</body>
 </html>
