pushing tp github

--- a/homepage.html
+++ b/homepage.html
@@ -46,30 +46,15 @@ li a:hover:not(.active) {
 </ul>
 
 <div style="padding:20px;margin-top:30px;background-color:#1abc9c;height:1500px;">
-<h1>Fixed Top Navigation Bar</h1>
-<h2>Scroll this page to see the effect</h2>
-<h2>The navigation bar will stay at the top of the page while scrolling</h2>
+    
+    <h1>Amy Dolan IS1113 Project</h1>
+<h2>Student Number: 117407532</h2>
+ <br/>
+        <a href="https://is1113117407532.herokuapp.com">is1113117407532.herokuapp.com</a>
+        <br/>
+        <br/>
+        <a href="https://github.com/amydolan/is1113117407532/graphs/commit-activity">Github</a>
 
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
 </div>
 
 </body>
