pushing to github

--- a/homepage.html
+++ b/homepage.html
@@ -32,7 +32,7 @@ li a:hover:not(.active) {
 }
 
 .active {
-    background-color: #4CAF50;
+    background-color: #FFD1DC;
 }
 </style>
 </head>
@@ -40,12 +40,12 @@ li a:hover:not(.active) {
 
 <ul>
   <li><a class="active" href="homepage.html">Home</a></li>
-  <li><a href="interests/sports.html">Interests</a></li>
-  <li><a href="ebusiness/Ebus1.php">E-Business</a></li>
   <li><a href="cv/cv_page1.html">CV</a></li>
+  <li><a href="interests/sports.html">Interests</a></a></li>
+  <li><a href="ebusiness/Ebus1.php">E-Business</a></li>
 </ul>
 
-<div style="padding:20px;margin-top:30px;background-color:#1abc9c;height:1500px;">
+<div style="padding:20px;margin-top:30px;background-color:#DFECFF;height:1500px;">
     
     <h1>Amy Dolan IS1113 Project</h1>
 <h2>Student Number: 117407532</h2>
