--- a/cv/cv_page1.html
+++ b/cv/cv_page1.html
@@ -1,6 +1,63 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+<style>
+body {margin:0;}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #FFD1DC;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li><a class="active" href="homepage.html">Home</a></li>
+  <li><a href="cv/cv_page1.html">CV</a></li>
+  <li><a href="interests/sports.html">Interests</a></a></li>
+  <li><a href="ebusiness/Ebus1.php">E-Business</a></li>
+</ul>
+
+<div style="padding:20px;margin-top:30px;background-color:#DFECFF;height:1500px;">
+
+ <h1 class="mainheading">Personal Details</h1>
+        <p><strong>Name:</strong> Amy Dolan</p>
+        <p><strong>Phone Number:</strong> **********</p>
+        <p><strong>Address:</strong> **********</p>
+        <p><strong>Email:</strong> 117407532@umail.ucc.ie</p>
+        
+        <a href="cv_page2.html" class="btn btn-dark">Next</a>
+
+</div>
+
     <head>  
     <title>Personal</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" />
@@ -12,13 +69,5 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     </head>
-    <body>
-        <h1 class="mainheading">Personal Details</h1>
-        <p><strong>Name:</strong> Amy Dolan</p>
-        <p><strong>Phone Number:</strong> 086 12345678</p>
-        <p><strong>Address:</strong> *</p>
-        <p><strong>Email:</strong> 117407532@umail.ucc.ie</p>
-        
-        <a href="cv_page2.html" class="btn btn-dark">Next</a>
-    </body>
+
 </html>
