--- a/cv/cv_page2.html
+++ b/cv/cv_page2.html
@@ -40,7 +40,7 @@ li a:hover:not(.active) {
 <body>
 
 <ul>
-  <li><a class="active" href="homepage.html">Home</a></li>
+  <li><a class="active" href="../homepage.html">Home</a></li>
   <li><a href="cv/cv_page1.html">CV</a></li>
   <li><a href="interests/sports.html">Interests</a></a></li>
   <li><a href="ebusiness/Ebus1.php">E-Business</a></li>
