pushing to github

--- a/cv/cv_page1.html
+++ b/cv/cv_page1.html
@@ -87,15 +87,15 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Phone Number: **********</p>
-      <img src="phone.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="phone.png" class="img-responsive margin" style="display:inline" alt="Phone Icon">
     </div>
     <div class="col-sm-4"> 
       <p>Email: 117407532@umail.ucc.ie</p>
-      <img src="email.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="email.png" class="img-responsive margin" style="display:inline" alt="Email Icon">
     </div>
     <div class="col-sm-4"> 
       <p>Address: **********</p>
-      <img src="address.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="address.png" class="img-responsive margin" style="display:inline" alt="Address Icon">
     </div>
   </div>
 </div>
