--- a/cv/cv_page2.html
+++ b/cv/cv_page2.html
@@ -76,33 +76,33 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">Who Am I?</h3>
-  <img src="education.jpeg" class="img-responsive img-circle margin" style="display:inline" alt="education" width="350" height="350">
-  <h3>I'm a 19 year old student studying Business Information Systems in University College Cork</h3>
+  <h3 class="margin">Education</h3>
+  <img src="UCC.jpg" class="img-responsive img-circle margin" style="display:inline" alt="education" width="350" height="350">
+  <h3>I am currently in first year in University College Cork studying Business Information Systems.</h3>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">What Am I?</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+  <h3 class="margin">Why BIS?</h3>
+  <p>I chose to study Business Information Systems because it's quite a broad degree course that allows you to learn and build on numerous different skills that will help you in the workplace, along with a 6 month placement in third year.</p>
   </a>
 </div>
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Where To Find Me?</h3><br>
+  <h3 class="margin">Previous Education</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Primary School: I attended St. Joseph's N.S. in Glanmire for the years 2003-2011.</p>
+      <img src="primary.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Secondary School: I attended Glanmire Community College for the years 2011-2017.</p>
+      <img src="secondary.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Below is a picture of one of the highlights of my time in GCC, winning the 'Music Student of the Year Award'.</p>
+      <img src="gccaward.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
@@ -110,4 +110,3 @@
 
 </body>
 </html>
-
