--- a/cv/cv_page3.html
+++ b/cv/cv_page3.html
@@ -76,9 +76,9 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">Who Am I?</h3>
-  <img src="violin.jpg" class="img-responsive img-circle margin" style="display:inline" alt="violin" width="350" height="350">
-  <h3>I'm a 19 year old student studying Business Information Systems in University College Cork.</h3>
+  <h3 class="margin">Work Experience</h3>
+  <img src="work.jpg" class="img-responsive img-circle margin" style="display:inline" alt="violin" width="350" height="350">
+  <h3>I'm a dedicated, hard-working individual and have demonstrated this over the past three years during my time as an employee of Phelans' Pharmacy in Glanmire</h3>
 </div>
 
 <!-- Second Container -->
@@ -92,19 +92,19 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Where To Find Me?</h3><br>
+  <h3 class="margin">Skills</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Customer Service Skills</p>
+      <img src="customerservice.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Organisational Skills</p>
+      <img src="organised.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Technology Skills</p>
+      <img src="technology.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
