pushing to github

--- a/cv/cv_page3.html
+++ b/cv/cv_page3.html
@@ -78,7 +78,7 @@
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Work Experience</h3>
   <img src="work.jpg" class="img-responsive img-circle margin" style="display:inline" alt="violin" width="350" height="350">
-  <h3>I'm a dedicated, hard-working individual and have demonstrated this over the past three years during my time as an employee of Phelans' Pharmacy in Glanmire</h3>
+  <h3>I'm a dedicated, hard-working individual and have demonstrated this over the past three years as an employee of Phelans' Pharmacy in Glanmire.</h3>
 </div>
 
 <!-- Second Container -->
