pushing to github

--- a/cv/cv_page2.html
+++ b/cv/cv_page2.html
@@ -84,8 +84,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Why BIS?</h3>
-  <p>I chose to study Business Information Systems because it's quite a broad degree course that allows you to learn and build on numerous different skills that will help you in the workplace, along with a 6 month placement in third year.</p>
-  </a>
+  <p>I chose to study Business Information Systems because it's quite a broad degree course that allows you to learn and build on numerous different skills that will help you in the workplace. The course also includes a 6 month placement in third year which I found to be quite appealing as I believe hands-on experience is key.</p>
 </div>
 
 <!-- Third Container (Grid) -->
