--- a/cv/cv_page3.html
+++ b/cv/cv_page3.html
@@ -95,15 +95,16 @@
   <h3 class="margin">Skills</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Customer Service Skills</p>
+      <h3>Customer Service Skills</h3>
+      <p>My primary role is to work on the counter. This involves dealing with a variety of customers and patients with an array of different needs. I do </p>
       <img src="customerservice.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Organisational Skills</p>
+      <h3>Organisational Skills</h3>
       <img src="organised.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Technology Skills</p>
+      <h3>Technology Skills</h3>
       <img src="technology.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
