--- a/interests/sports.html
+++ b/interests/sports.html
@@ -41,9 +41,9 @@ li a:hover:not(.active) {
 
 <ul>
   <li><a class="active" href="../homepage.html">Home</a></li>
-  <li><a href="cv/cv_page1.html">CV</a></li>
-  <li><a href="interests/sports.html">Interests</a></a></li>
-  <li><a href="ebusiness/Ebus1.php">E-Business</a></li>
+  <li><a href="../cv/cv_page1.html">CV</a></li>
+  <li><a href="sports.html">Interests</a></a></li>
+  <li><a href="../ebusiness/Ebus1.php">E-Business</a></li>
 </ul>
 
 <div style="padding:20px;margin-top:30px;background-color:#DFECFF;height:1500px;">
