pushing to github

--- a/cv/cv_page3.html
+++ b/cv/cv_page3.html
@@ -96,15 +96,17 @@
   <div class="row">
     <div class="col-sm-4">
       <h3>Customer Service Skills</h3>
-      <p>My primary role is to work on the counter. This involves dealing with a variety of customers and patients with an array of different needs. I do </p>
+      <p>My primary role is to work on the counter. This involves dealing with a variety of customers and patients with an array of different needs.</p>
       <img src="customerservice.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <h3>Organisational Skills</h3>
+      <p>On top of providing excellent customer service, I am also responsable for dealing with the numerous orders we receieve over the course  of the weekend.</p>
       <img src="organised.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <h3>Technology Skills</h3>
+      <p>I utilise my technology skills at work when using McLernon's Pharmacy System and Unipos regularly to place and receive orders.</p>
       <img src="technology.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
