pushing to github

--- a/interests/travel.html
+++ b/interests/travel.html
@@ -29,10 +29,10 @@
     <body>
         
         <div id="pagepiling">
-            <div class="section" id="section1">Most travelled to: San Francisco, California</div>
+            <div class="section" id="section1">Most travelled to: Portland, Oregon</div>
         	<div class="section" id="section2">Want to visit: Vienna, Austria</div>
         	<div class="section" id="section3">
-        	    Settle in: Portland, Oregon
+        	    Settle in: Cork, Ireland
         	    <br/>
         	    <br/>
         	    <a href="../homepage.html" class="btn btn-success">Home</a>
