pushign tot github

--- a/homepage.html
+++ b/homepage.html
@@ -23,17 +23,21 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
+    Student Number 117407532
   </div>
   <div class="w3-display-middle">
-      Student Number: 117407532
+
     <h1 class="w3-jumbo w3-animate-top">Amy Dolan</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%"> 
     <p class="w3-large w3-center">IS1113 Project</p>
     
+    <p class="w3-large w3-center">
     <a href = "interests/sports.html">Interests</a>
+    <br/>
     <a href = "cv/cv_page1.html">CV</a>
+    <br/>
     <a href = "ebusiness/shophome.html">My Online Cloud Services Store</a>
+    </p>
     
   </div>
 </div>
