pushing to github

--- a/cv/cv_page3.html
+++ b/cv/cv_page3.html
@@ -62,7 +62,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="../homepage.html">Home</a>
+      <a class="navbar-brand" href="../homepage.html">HOME</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -101,7 +101,7 @@
     </div>
     <div class="col-sm-4"> 
       <h4><strong>Organisational Skills</strong></h4>
-      <p>On top of providing excellent customer service, I am also responsable for dealing with the numerous orders we receieve over the course  of the weekend.</p>
+      <p>On top of providing excellent customer service, I am also responsible for dealing with the numerous orders we receive over the course  of the weekend.</p>
       <img src="organised.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
