--- a/ebusiness/aboutcloud.html
+++ b/ebusiness/aboutcloud.html
@@ -5,12 +5,13 @@
     <title>About Cloud</title>
 About Cloud
 </head>
-<body>
+
+<body background="cloud.jpg">
 
 <ul>
   <li><a class="active" href="../homepage.html">Home</a></li>
   <li><a href="../cv/cv_page1.html">CV</a></li>
-  <li><a href="sports.html">Interests</a></a></li>
+  <li><a href="../interests/sports.html">Interests</a></a></li>
   <li><a href="shophome.html">E-Business Homepage</a></li>
 </ul>
 
