--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <title>Homepage</title>
 <meta charset="UTF-8">
 
@@ -37,6 +37,12 @@ body, html {height: 100%}
     <a href = "cv/cv_page1.html">CV</a>
     <br/>
     <a href = "ebusiness/shophome.html">My Online Cloud Services Store</a>
+    <br/>
+
+    <a href = "https://github.com/amydolan/is1113117407532/graphs/commit-activity">Github Commit History</a>
+    <br/>
+    <a href = "https://is1113117407532.herokuapp.com/">Heroku</a>
+    
     </p>
     
   </div>
