pushing to github

--- a/interests/sports.html
+++ b/interests/sports.html
@@ -40,10 +40,11 @@
         	<div class="section" id="section2"><center><h1>Music</h1><iframe width="560" height="315" src="https://www.youtube.com/embed/EFWanu8h17o?rel=0&amp;start=180" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
         	<br/>
         	Music is my real passion. I play the violin and have done so for the past 14 years. I've been fortunate enough to play with the Cork Symphony Orchestra, the National Youth Orchestra of Ireland and Cork Youth
-        	Orchestra. I've included a video of a music video CYO made with the band Seo Linn. I can even be spotted in the video a couple of times (keep a close eye at the 3 minute mark!)</div>
+        	Orchestra. I've included a music video CYO made with the band Seo Linn. I can even be spotted in the video a couple of times (keep a close eye at the 3 minute mark!)</div>
         	
         	<!--More Music...-->
         	<div class="section" id="section3"><centre><h1>More Music...</h1><img src="quartet.jpg" alt="School Quartet"></centre>
+        	<br/>
         	<br/>
         	I have a huge passion for chamber music and the picture above shows me with my fellow quartet members when we were in secondary school. I completed my Grade 8 exam in 2016 with a mark of 94 
         	and I am currently studying for a music diploma in violin performance.
