--- a/interests/travel.html
+++ b/interests/travel.html
@@ -6,6 +6,7 @@
         <title>Travel</title>
         <link rel="stylesheet" href="../mystylesheet.css" type="text/css" />
         <link rel="stylesheet" href="int_pages.css" type="text/css" />
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         
         
         <!--JQuery-->
@@ -35,7 +36,9 @@
         	    Settle in: Cork, Ireland
         	    <br/>
         	    <br/>
-        	    <a href="../homepage.html" class="btn btn-success">Home</a>
+        	    <a href="../homepage.html" class="w3-button w3-black">Home</a>
+        	    <a href="cloudservices.html" class="w3-button w3-black">Cloud Services</a>
+        	    <a href="sports.html" class="w3-button w3-black">Sports & Music</a>
         	</div>
         </div> 
     </body>
