pushing to github

--- a/homepage.html
+++ b/homepage.html
@@ -41,7 +41,7 @@ body, html {height: 100%}
 
     <a href = "https://github.com/amydolan/is1113117407532/graphs/commit-activity">Github Commit History</a>
     <br/>
-    <a href = "https://is1113117407532.herokuapp.com/">Heroku</a>
+    <a href = "https://is1113117407532.herokuapp.com">Heroku</a>
     
     </p>
     
