pushing to github

--- a/cv/cv_page1.html
+++ b/cv/cv_page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
+  <!-- Bootstrap Theme Made By www.w3schools.com - No Copyright -->
   <title>Amy Dolan</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +10,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
+  
+  /*Setting the font, size and colour of my text*/
   body {
       font: 20px Montserrat, sans-serif;
       line-height: 1.8;
@@ -53,7 +55,7 @@
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- Navbar links and design -->
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
@@ -74,14 +76,14 @@
   </div>
 </nav>
 
-<!-- First Container -->
+<!-- First Container with opening statement-->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
   <img src="violin.jpg" class="img-responsive img-circle margin" style="display:inline" alt="violin" width="350" height="350">
   <h3>My name is Amy Dolan and I'm a 19 year old student studying Business Information Systems in University College Cork.</h3>
 </div>
 
-<!-- Third Container (Grid) -->
+<!-- Second Container (Grid) with contact details and images-->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Where To Find Me?</h3><br>
   <div class="row">
