--- a/interests/travel.html
+++ b/interests/travel.html
@@ -5,9 +5,8 @@
         <meta charset="utf-8"/>
         <title>Travel</title>
         <link rel="stylesheet" href="../mystylesheet.css" type="text/css" />
-        <link rel="stylesheet" href="int_pages.css" type="text/css" />
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        
+        <link rel="stylesheet" href="travel.css" type="text/css" />
         
         <!--JQuery-->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
