--- a/cv/cv_page2.html
+++ b/cv/cv_page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
+  <!-- Bootstrap Theme Made By www.w3schools.com - No Copyright -->
   <title>Amy Dolan</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +10,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
+  
+   /*Setting the font, size and colour of my text*/
   body {
       font: 20px Montserrat, sans-serif;
       line-height: 1.8;
@@ -53,7 +55,7 @@
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- Navbar links and design -->
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
@@ -74,20 +76,20 @@
   </div>
 </nav>
 
-<!-- First Container -->
+<!-- First Container with opening statement-->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Education</h3>
   <img src="UCC.jpg" class="img-responsive img-circle margin" style="display:inline" alt="education" width="350" height="350">
   <h3>I am currently in first year in University College Cork studying Business Information Systems.</h3>
 </div>
 
-<!-- Second Container -->
+<!-- Second Container with text-->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Why BIS?</h3>
   <p>I chose to study Business Information Systems because it's quite a broad degree course that allows you to learn and build on numerous different skills that will help you in the workplace. The course also includes a 6 month placement in third year which I found to be quite appealing as I believe hands-on experience is key.</p>
 </div>
 
-<!-- Third Container (Grid) -->
+<!-- Third Container (Grid) with previous education details and images -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Previous Education</h3><br>
   <div class="row">
