--- a/cv/cv_page3.html
+++ b/cv/cv_page3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
+  <!-- Bootstrap Theme Made By www.w3schools.com - No Copyright -->
   <title>Amy Dolan</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +10,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
+  
+  /*Setting the font, size and colour of my text*/
   body {
       font: 20px Montserrat, sans-serif;
       line-height: 1.8;
