pushing to github

--- a/ebusiness/shophome.html
+++ b/ebusiness/shophome.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
 <title>Homepage</title>
 <meta charset="UTF-8">
-
-<!--CSS Template attained from W3Schools-->
+<link rel="stylesheet" href="shophome.css" type="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url("ebuswallpaper.jpg");
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-</style>
+</head>
+
 <body>
   
-  
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-middle">
 
-    <h1 class="w3-jumbo w3-animate-top">Amy's Cloud Store</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%"> 
-    <p class="w3-large w3-center">IS1113 Project</p>
-    
-    <p class="w3-large w3-center">
-    <a href = "Ebus1.php">Products</a>
+    <font color="white">
+    IS1113 Project
+    <center>
+    <br/> 
+    <br/> 
+    <br/> 
+    <h1>Amy's Cloud Store</h1>
     <br/>
-    <a href = "aboutcloud.html">About Cloud</a>
     <br/>
-    <a href = "../homepage.html">My personal homepage</a>
+    <a href = "Ebus1.php"><button>Products</button></a>
+    <br/>
+    <a href = "aboutcloud.html"><button>About Cloud</button></a>
+    <br/>
+    <a href = "../homepage.html"><button>My personal homepage</button></a>
+    </center> </font>
     </p>
     
-  </div>
-</div>
-
 </body>
 </html>
