--- a/interests/travel.html
+++ b/interests/travel.html
@@ -29,14 +29,14 @@
     <body>
         
         <div id="pagepiling">
-            <div class="section" id="section1">Most travelled to: Portland, Oregon. </br>
+            <div class="section" id="section1"><mark>Most travelled to: Portland, Oregon. </br>
             My Uncle lives in Portland and I've been lucky enough to have visited him many times. Portland is known for its quirks and weird ways and that's exactly what I love about
             the city. The beauty of the outdoors is truly showcased in the state of Oregon too. You have the chance to swim at the beach and ski in the same day, an extremely rare activity in my eyes 
-            anyway! </div>
-        	<div class="section" id="section2">Want to visit: Vienna, Austria. </br>
-        	Vienna has always been at the top of my list in terms of my dream travel destination. I think its the musical culture that's responsible for my real interest in the city. </div>
+            anyway!</mark> </div>
+        	<div class="section" id="section2"><mark>Want to visit: Vienna, Austria. </br>
+        	Vienna has always been at the top of my list in terms of my dream travel destination. I think its the musical culture that's responsible for my real interest in the city.</mark> </div>
         	<div class="section" id="section3">
-        	    Settle in: Cork, Ireland
+        	    <mark>Settle in: Cork, Ireland </mark>
         	    <br/>
         	    <br/>
         	    <a href="../homepage.html" class="w3-button w3-black">Home</a>
