pushing to github

--- a/ebusiness/shophome.html
+++ b/ebusiness/shophome.html
@@ -3,28 +3,58 @@
   <head>
 <title>Homepage</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="shophome.css" type="text/css" />
+<link rel="stylesheet" href="../mystylesheet.css" type="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+<style>
+
+body {
+    background-image: url("ebuswallpaper.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+body {margin:0;
+      font: 20px Montserrat, sans-serif;
+      line-height: 1.8;
+      background-color:#DFECFF;
+}
+
+.button {
+    background-color: #008CBA; /* Blue */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 6px;
+}
+  
+</style>
+
 <body>
   
-
-
+    <ul>
+  <li><a class="active" href="../homepage.html">Home</a></li>
+  <li><a href="../cv/cv_page1.html">CV</a></li>
+  <li><a href="../interests/sports.html">Interests</a></a></li>
+  <li><a href="shophome.html">E-Business Homepage</a></li>
+</ul>
+  
     <font color="white">
     IS1113 Project
     <center>
     <br/> 
-    <br/> 
-    <br/> 
+    <br/>
     <h1>Amy's Cloud Store</h1>
     <br/>
-    <br/>
+
     <a href = "Ebus1.php"><button>Products</button></a>
     <br/>
     <a href = "aboutcloud.html"><button>About Cloud</button></a>
-    <br/>
-    <a href = "../homepage.html"><button>My personal homepage</button></a>
     </center> </font>
     </p>
     
