--- a/interests/travel.html
+++ b/interests/travel.html
@@ -5,7 +5,6 @@
         <meta charset="utf-8"/>
         <title>Travel</title>
         <link rel="stylesheet" href="../mystylesheet.css" type="text/css" />
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="travel.css" type="text/css" />
         
         <!--JQuery-->
@@ -31,17 +30,20 @@
         <div id="pagepiling">
             <div class="section" id="section1"><mark>Most travelled to: Portland, Oregon. </br>
             My Uncle lives in Portland and I've been lucky enough to have visited him many times. Portland is known for its quirks and weird ways and that's exactly what I love about
-            the city. The beauty of the outdoors is truly showcased in the state of Oregon too. You have the chance to swim at the beach and ski in the same day, an extremely rare activity in my eyes 
+            the city. The beauty of the outdoors is truly showcased in the state of Oregon too. You have the chance to swim at the beach and ski in the same day, an extremely rare opportunity in my eyes 
             anyway!</mark> </div>
         	<div class="section" id="section2"><mark>Want to visit: Vienna, Austria. </br>
-        	Vienna has always been at the top of my list in terms of my dream travel destination. I think its the musical culture that's responsible for my real interest in the city.</mark> </div>
-        	<div class="section" id="section3">
-        	    <mark>Settle in: Cork, Ireland </mark>
+        	Vienna has always been at the top of my list in terms of my dream travel destination. I think its the musical culture that's responsible for my real interest in the city. It's always been
+        	my dream to attend one of the New Year's Day Concerts held at the Musikverein in Vienna. Hopefully I will, someday!</mark> </div>
+        	<div class="section" id="section3"><mark>Settle in: Cork, Ireland. <br/>
+        	No need to explain this one.. I couldn't image myself living forever anywhere else.     
+        	    </mark>
         	    <br/>
         	    <br/>
-        	    <a href="../homepage.html" class="w3-button w3-black">Home</a>
-        	    <a href="cloudservices.html" class="w3-button w3-black">Cloud Services</a>
-        	    <a href="sports.html" class="w3-button w3-black">Sports & Music</a>
+        	    <!--Links to other sections-->
+        	    <a href="../homepage.html"><button>Home</button></a>
+        	    <a href="cloudservices.html"><button>Cloud Services</button></a>
+        	    <a href="sports.html"><button>Sports & Music</button></a>
         	</div>
         </div> 
     </body>
