--- a/interests/travel.html
+++ b/interests/travel.html
@@ -28,22 +28,41 @@
     <body>
         
         <div id="pagepiling">
-            <div class="section" id="section1"><mark>Most travelled to: Portland, Oregon. </br>
-            My Uncle lives in Portland and I've been lucky enough to have visited him many times. Portland is known for its quirks and weird ways and that's exactly what I love about
+            <div class="section" id="section1"><h3><mark>Most travelled to: Portland, Oregon. </mark></h3></br>
+            <mark>My Uncle lives in Portland and I've been lucky enough to have visited him many times. Portland is known for its quirks and weird ways and that's exactly what I love about
             the city. The beauty of the outdoors is truly showcased in the state of Oregon too. You have the chance to swim at the beach and ski in the same day, an extremely rare opportunity in my eyes 
-            anyway!</mark> </div>
-        	<div class="section" id="section2"><mark>Want to visit: Vienna, Austria. </br>
-        	Vienna has always been at the top of my list in terms of my dream travel destination. I think its the musical culture that's responsible for my real interest in the city. It's always been
-        	my dream to attend one of the New Year's Day Concerts held at the Musikverein in Vienna. Hopefully I will, someday!</mark> </div>
-        	<div class="section" id="section3"><mark>Settle in: Cork, Ireland. <br/>
-        	No need to explain this one.. I couldn't image myself living forever anywhere else.     
+            anyway!</mark> 
+            <ul>
+                <li><a class="active" href="../homepage.html">Home</a></li>
+                <li><a href="../cv/cv_page1.html">CV</a></li>
+                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
+                </ul>
+            </div>
+        	<div class="section" id="section2"><h3><mark>Want to visit: Vienna, Austria.</mark> </h3></br>
+        	<mark>Vienna has always been at the top of my list in terms of my dream travel destination. I think its the musical culture that's responsible for my real interest in the city. It's always been
+        	my dream to attend one of the New Year's Day Concerts held at the Musikverein in Vienna. Hopefully I will, someday!</mark> 
+        	<ul>
+                <li><a class="active" href="../homepage.html">Home</a></li>
+                <li><a href="../cv/cv_page1.html">CV</a></li>
+                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
+                </ul>
+        	</div>
+        	<div class="section" id="section3"><h3><mark>Settle in: Cork, Ireland.</mark></h3> <br/>
+        	<mark>No need to explain this one.. I couldn't image myself living forever anywhere else.     
         	    </mark>
-        	    <br/>
-        	    <br/>
-        	    <!--Links to other sections-->
-        	    <a href="../homepage.html"><button>Home</button></a>
-        	    <a href="cloudservices.html"><button>Cloud Services</button></a>
-        	    <a href="sports.html"><button>Sports & Music</button></a>
+        	<br/>    
+        	<a href="cloudservices.html" class="button">Cloud Services</a>
+        	<br/>
+        	<br/>
+        	<a href="sports.html" class="button">Sports & Music</a>
+        	    <ul>
+                <li><a class="active" href="../homepage.html">Home</a></li>
+                <li><a href="../cv/cv_page1.html">CV</a></li>
+                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
+                </ul>
         	</div>
         </div> 
     </body>
